istio/objects.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-http-server-8080-and-8443
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: deepakdeore2004/go-tls-server-self-signed:v4
        ports:
        - containerPort: 8080
        - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 443
      targetPort: 8443
      name: https
    - protocol: TCP
      port: 10002
      targetPort: 8443
      name: https-mtls

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
spec:
  selector:
    istio: test-gw
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/cert-chain.pem
      privateKey: /etc/istio/ingressgateway-certs/key.pem
      minProtocolVersion: TLSV1_2
      maxProtocolVersion: TLSV1_3
    hosts:
    - "*"
  - port:
      number: 10002
      name: mtls
      protocol: HTTPS
    tls:
      mode: MUTUAL
      serverCertificate: /etc/istio/ingressgateway-certs/cert-chain.pem
      caCertificates: /etc/istio/ingressgateway-certs/cert-chain.pem
      privateKey: /etc/istio/ingressgateway-certs/key.pem
      minProtocolVersion: TLSV1_2
      maxProtocolVersion: TLSV1_3
    hosts:
    - "*"
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: test
spec:
  gateways:
    - test-gateway
  hosts:
    - '*'
  http:
    - route:
        - destination:
            host: test-service
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test
spec:
  host: test-service
  trafficPolicy:
    tls:
      mode: SIMPLE
